fix link color  contrast

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,7 +17,7 @@ link[rel="manifest"] {
 }
 
 a {
-  color: #1a73e8;
+  color: #1060c9;
   text-decoration: none;
 }
 
