--- a/styles/mini-framework.css
+++ b/styles/mini-framework.css
@@ -4,7 +4,6 @@ h1, h2, h3, h4 {
 }
 a {
     text-decoration: none;
-    color: #1a73e8;
     -webkit-touch-callout: none;
 }
 
